--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 	 			<li><a href="">关于我</a></li>
 	 			<li><a href="">慢生活</a></li>
 	 			<li><a href="">碎言碎语</a></li>
-	 			<li><a href="">模板分享</a></li>
+	 			<li><a href="">每日总结</a></li>
 	 			<li><a href="">学无止境</a></li>
 	 			<li><a href="">留言版</a></li>
 	 		</ul>
@@ -26,12 +26,11 @@
 	<img src="images/banner_top.jpg" class="datu" />
 	<div class="mzhong ">
 		<div class="zuo clearfix">
-		<h3 class="tuijian">文章</h3>
+		<h3 class="tuijian"><a href="3.31jie.html">每日 <span>总结</span></a></h3>
 		<div class="zhuyao clearfix">
-		<h4 class="dibt">【匆匆那些年】总结个人博客经历的这四年…</h4>
-		<p class="pbj clearfix"><img src="" alt="没有" class="wztp" />
-		  博客从最初的域名购买，到上线已经有四年的时间了，这四年的时间，有笑过，有怨过，有悔过，有执着
-		  ..... <a href="" >阅读全文 &lt;</a></p>
+		<h4 class="dibt"><a href="3.31jie.html">3.13.2017</a></h4>
+		<p class="pbj clearfix"><img src="images/timg.jpg" alt="没有" class="wztp" />
+		 1. git上传<br />2.域名 <a href="3.31jie.html" >阅读全文 &lt;</a></p>
 		<p class="sjzz"> 2017-3-31 </p>
 		</div>
 	</div>
