--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	 		<ul>
 	 			<li><a href="">首页</a></li>
 	 			<li><a href="">关于我</a></li>
-	 			<li><a href="">慢生活</a></li>
+	 			<li><a href="jinrzy.html ">今日作业</a></li>
 	 			<li><a href="">碎言碎语</a></li>
 	 			<li><a href="">每日总结</a></li>
 	 			<li><a href="">学无止境</a></li>
@@ -32,6 +32,11 @@
 		<p class="pbj clearfix"><img src="images/timg.jpg" alt="没有" class="wztp" />
 		 1. git上传<br />2.域名 <a href="3.31jie.html" >阅读全文 &lt;</a></p>
 		<p class="sjzz"> 2017-3-31 </p>
+		</div>
+		
+		
+		<div >
+			<a href="4.5zy.html">4.5作业</a>
 		</div>
 	</div>
 	<div class="you">
