--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
 		<p class="pbj clearfix"><img src="images/timg.jpg" alt="没有" class="wztp" />
 		 1. git上传<br />2.域名 <a href="3.31jie.html" >阅读全文 &lt;</a></p>
 		<p class="sjzz"> 2017-3-31 </p>
+		<h4 class="dibt"><a href="4.13.2.html">4.13.2017</a></h4>
 		</div>
 		
 		
