--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
 	<head>
 		<meta charset="UTF-8">
 		<title>个人博客</title>
-		<link rel="stylesheet" type="text/css" href="css/zjx.css"/>
+		<link rel="stylesheet" type="text/css" href="css/zjx1g.css"/>
 	</head>
 	<body>
+		
 	 <div class="heade clearfix">
 	 	<div class="logo">
 	 		<img src="images/lang.png"/>
@@ -39,6 +40,13 @@
 		<div >
 			<a href="4.5zy.html">4.5作业</a>
 		</div>
+		
+		
+		<div >
+			<a href="4.5zy.html">4.5作业</a>
+		</div>
+		<a href="5.10j.html">5.10总结</a>
+		<a href="jsjichu.html">javascript总结</a>
 	</div>
 	<div class="you">
 		<h3 class="suixiang">随心记</h3>
