--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@ a{text-decoration: none;color:var(--main-white);}
 
 
 
-#projects{background: var(--main-blue);}
+#projects{background: var(--main-blue);padding-top: 1em;}
 
 #main_3{display: flex;flex-direction: column;justify-content: center;align-items: center;text-align: center;padding: 0 2rem;background: var(--main-gray);}
 .main_3_link{display: flex;justify-content: center;width: 100%;max-width: 980px; margin-top: 4rem;flex-wrap: wrap;}
@@ -135,11 +135,11 @@ to {width: 90%;}
             <input type="radio" name="radio-set" checked="checked" id="navbar_1">
             <a href="#" class="nav_a">关于</a>
             <input type="radio" name="radio-set" id="navbar_2">
-            <a href="#" class="nav_a">技能</a>
-            <input type="radio" name="radio-set" id="navbar_3">
             <a href="#" class="nav_a">作品</a>
-            <input type="radio" name="radio-set" id="navbar_4">
+            <input type="radio" name="radio-set" id="navbar_3">
             <a href="#" class="nav_a">联系</a>
+            <input type="radio" name="radio-set" id="navbar_4">
+            <a href="#" class="nav_a">技能</a>
             <!-- <a href="#contact1" class="nav_a"></a> -->
 
 
