--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="keywords" content="web前端个人简历,web前端,曹**简历,前端个人博客,前端工程师">
     <meta name="description" content="曹**web前端个人简历">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>曹**web前端个人简历</title>
+    <title>web前端个人简历</title>
     <style>* {
             margin: 0;
             padding: 0;text-align: center;
@@ -114,14 +114,36 @@ a{text-decoration: none;color:var(--main-white);}
 
 .des p{color: rgba(140,180,250,.1);font:champ,Verdana,Arial;text-shadow: 1px 4px 6px #def, 0 0 0 #008;}
 
-#navbar_4:checked ~ .main .jn_tx_li_h{animation: myfirst 5s forwards;}
-
+#navbar_4:checked ~ .main .jn_tx_ul li:nth-of-type(1) .jn_tx_li_h{animation: myfirst 3s forwards;}
+#navbar_4:checked ~ .main .jn_tx_ul li:nth-of-type(2) .jn_tx_li_h{animation: myfirstq 3s forwards;}
+#navbar_4:checked ~ .main .jn_tx_ul li:nth-of-type(3) .jn_tx_li_h{animation: myfirsta 3s forwards;}
+#navbar_4:checked ~ .main .jn_tx_ul li:nth-of-type(4) .jn_tx_li_h{animation: myfirsts 3s forwards;}
+#navbar_4:checked ~ .main .jn_tx_ul li:nth-of-type(5) .jn_tx_li_h{animation: myfirstz 3s forwards;}
 @keyframes myfirst{
 from {width: 10%;}
 to {width: 90%;}
 }   
 
-  
+@keyframes myfirstq{
+from {width: 10%;}
+to {width: 80%;}
+}   
+
+@keyframes myfirsta{
+from {width: 10%;}
+to {width: 50%;}
+}   
+
+@keyframes myfirsts{
+from {width: 10%;}
+to {width: 60%;}
+}   
+
+@keyframes myfirstz{
+from {width: 10%;}
+to {width: 70%;}
+}   
+
    
    
    
@@ -152,39 +174,39 @@ to {width: 90%;}
                 <section class="main_gt" id="projects">
                     <h2>These are some of my projects</h2>
                     <div class="fiexbox">
-                        <div class="project-tile" >
-                            <a href="https://codepen.io/daobenweixin/pen/pXpzVx" class="profile-link">
-                                <img src="images/qd1.jpg" alt="链接别点，我没搞">
-                                <p>但愿天下人不病</p>
+                        <div class="project-tile" title="都是假的">
+                            <a href="./五子棋(可悔棋).html" class="profile-link">
+                                <img src="images/timg.jpg" alt="链接别点，我没搞">
+                                <p>五子棋</p>
                             </a>
                         </div>
-                        <div class="project-tile" >
+                        <div class="project-tile" title="都是假的">
                             <a href="https://codepen.io/daobenweixin/pen/vqpYMz" class="profile-link">
-                                <img src="images/js1.jpg" alt="链接别点，我没搞">
-                                <p>何妨柜内药生尘</p>
+                                <img src="images/1.3.jpg" alt="链接别点，我没搞">
+                                <p>凑数</p>
                             </a>
                         </div>
-                        <div class="project-tile" >
+                        <div class="project-tile" title="都是假的,凑数">
                             <a href="https://codepen.io/daobenweixin/pen/wLpOMj" class="profile-link">
                                 <img src="images/jsq.jpg" alt="链接别点，我没搞">
                                 <p>莲子心中苦</p>
                             </a>
                         </div>
-                        <div class="project-tile" >
+                        <div class="project-tile" title="都是假的,凑数">
                             <a href="https://codepen.io/daobenweixin/pen/wLpOMj" class="profile-link">
                                 <img src="images/1.jpg" alt="链接别点，我没搞">
                                 <p>梨儿腹内酸</p>
                             </a>
                         </div>
                         
-                        <div class="project-tile" >
+                        <div class="project-tile" title="都是假的,凑数">
                             <a href="https://codepen.io/daobenweixin/pen/wLpOMj" class="profile-link">
                                 <img src="images/timg.jpg" alt="链接别点，我没搞">
                                 <p>青山原不老，为雪白头</p>
                             </a>
                         </div>
-                        <div class="project-tile" >
-                            <a href="https://codepen.io/daobenweixin/pen/wLpOMj" class="profile-link">
+                        <div class="project-tile" title="都是假的,凑数">
+                            <a href="https://www.freecodecamp.one/天道有常" class="profile-link">
                                 <img src="images/timg.jpg" alt="链接别点，我没搞">
                                 <p>绿水本无忧，因风皱面</p>
                             </a>
@@ -200,28 +222,28 @@ to {width: 90%;}
                     </div>
                     <div class="main_3_link">
                         <a
-                        href="https://facebook.com/freecodecamp"
+                        href="#"
                         target="_blank"
                         class="btn contact-details"
                         >Facebook</a
                       >
                       <a
                         id="profile-link"
-                        href="https://github.com/freecodecamp"
+                        href="https://github.com/caobaiyu/caobaiyu.github.com"
                         target="_blank"
                         class="btn contact-details"
                         > GitHub</a
                       >
                       <a
-                        href="https://twitter.com/freecodecamp"
+                        href="#"
                         target="_blank"
                         class="btn contact-details"
                         > Twitter</a
                       >
-                      <a href="mailto:example@example.com" class="btn contact-details"
+                      <a href="https://email.163.com/" class="btn contact-details"
                         > Send a mail</a
                       >
-                      <a href="tel:555-555-5555" class="btn contact-details"
+                      <a href="#" class="btn contact-details"
                         >Call me</a
                       >
                     </div>
@@ -251,8 +273,8 @@ to {width: 90%;}
                                     <p class="jn_tx_li_p">掌握 python，flask。</p>
                                 </li>
                                 <li class="jn_tx_li">
-                                    <h4 class="jn_tx_li_h">Photoshop</h4>
-                                    <p class="jn_tx_li_p">能使用 Photoshop 进行简单的图片处理。</p>
+                                    <h4 class="jn_tx_li_h">react</h4>
+                                    <p class="jn_tx_li_p">能使用 react进行组件化开发。</p>
                                 </li>
                             </ul>
                          </div>
@@ -274,8 +296,6 @@ to {width: 90%;}
 <script>
     var hhu = `哪位大爷，姑奶奶赏口饭？ 
 我就想混口饭，就这么点追求（但你面试不能这么说，虽然这是真的）！
-我是自学的（不管你信不信，反正我是不信，对！我不信！）。
-18636309299
 写的好的网页是不是都是学设计的啊？咱就搞不出来哪玩意！`
     console.log("%c" + hhu ,'color:red;font-size:50px')
     // var llk = document.querySelector("#navbar_4")
