--- a/index.html
+++ b/index.html
@@ -294,9 +294,8 @@ to {width: 70%;}
 
     </div>
 <script>
-    var hhu = `哪位大爷，姑奶奶赏口饭？ 
-我就想混口饭，就这么点追求（但你面试不能这么说，虽然这是真的）！
-写的好的网页是不是都是学设计的啊？咱就搞不出来哪玩意！`
+    var hhu = `
+好的网页是不是都是学设计的啊？咱这咋那么难看！`
     console.log("%c" + hhu ,'color:red;font-size:50px')
     // var llk = document.querySelector("#navbar_4")
     // console.log(llk.getAttribute("checked"))
@@ -306,7 +305,8 @@ to {width: 70%;}
     //     console.log(ffh.style.animation) ;
     //     if(ffh.style.animation){
     //         ffh.style.width = "10%" ;
-    //     }
+    //     }哪位大爷，姑奶奶赏口饭？ 
+//我就想混口饭，就这么点追求（但你面试不能这么说，虽然这是真的）！
     //     ffh.style.animation = "myfirst 5s forwards" ;
     //     console.log(1111)
     // },false)
