--- a/index.html
+++ b/index.html
@@ -4,10 +4,12 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="keywords" content="web前端个人简历,web前端,曹**简历,前端个人博客,前端工程师">
+  <meta name="description" content="曹**web前端个人简历">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="./css/new_in.css">
 
-  <title>Document</title>
+  <title>web前端个人简历</title>
 </head>
 
 <body>
@@ -112,7 +114,7 @@
                 <span>作品</span>
               </h3>
               <p class="content-detail">
-                右边的这些东西也就迷宫可以看看(可以试试，应该没问题),<a href="https://github.com/caobaiyu/caobaiyu.github.com">代码</a>的话，用的是并查集，
+                右边的这些东西也就迷宫可以看看(可以试试，应该没问题),<a href="https://github.com/caobaiyu/caobaiyu.github.com/blob/master/Primqiangb.html">代码</a>的话，用的是并查集，
                 还有很多小问题(不影响使用，成了之后就不想再动它了),没有查询树的深度，函数也有问题(前面也写了两个，都有问题，不能用)。写迷宫纯属个人爱好。
                 <br>
                 <br>
