--- a/index.html
+++ b/index.html
@@ -30,74 +30,72 @@
       </section>
       <!--/.HOME END-->
       <!--ABOUT-->
-      <section id="about" class="ab_fx">
+      <section id="about" class="ab_fx clearfix">
         <div class="fx_le_ab">
           <div class="bg-about"></div>
         </div>
-        <div class="fx_rg_ab ">
-          <!-- <div class="row"> -->
-          <!--OWL CAROUSEL2-->
-          <input type="radio" name="radio-set" checked="checked" id="navbar_2">
-          <span href="#" class="nav_a"></span>
-          <input type="radio" name="radio-set" id="navbar_3">
-          <span href="#" class="nav_a"></span>
-          <div class="jj_xhang_bx clearfix">
-            <div class="wrap-about jj_fl">
-              <div class="w-content">
-                <p class="head-about">
-                  我不太会说话，但做事应该还可以吧(或许偶尔有点神经质)！我上一家公司用的是react，antd的这一套东西。
-                  面试这东西还是仁者见仁智者见智吧(面试好难啊)！如果可以的话，先让我写点小东西！能力的话原生的和react我觉得自己没问题(不一定会说)，
-                  
-                  vue会点。sass，less都会点。express刚学的时候写过一点，现在应该比python(Flask)还知道的少。其他的就属于见过，我认识他，他不认识我。
-                </p>
-
-                <!-- <h5 class="name">
-                  M. Reza
-                </h5>
-                <img alt="signature" src="images/signature.png"> -->
-              </div>
-            </div>
-            <div class="wrap-about jj_rg">
-              <table class="w-content">
-                <tr>
-                  <td class="title">姓名 </td>
-                  <td class="break">:</td>
-                  <td> 曹白雨</td>
-                </tr>
-                <tr>
-                  <td class="title">电话 </td>
-                  <td class="break">:</td>
-                  <td> 186 &nbsp;3630 &nbsp;9299</td>
-                </tr>
-                <tr>
-                  <td class="title">邮箱 </td>
-                  <td class="break">:</td>
-                  <td> linyuan_jiewanghu@yeah.net</td>
-                </tr>
-                <tr>
-                  <td class="title">地址 </td>
-                  <td class="break">:</td>
-                  <td> 现住长安区新华街</td>
-                </tr>
-                <tr>
-                  <td class="title">微信 </td>
-                  <td class="break">:</td>
-                  <td> 同手机号</td>
-                </tr>
-                <tr>
-                  <td class="title">爱好 </td>
-                  <td class="break">:</td>
-                  <td> 好多</td>
-                </tr>
-                <!-- <tr>
+        <!-- <div class="xs_rg_ab"> -->
+          <div class="fx_rg_ab ">
+            <!-- <div class="row"> -->
+            <!--OWL CAROUSEL2-->
+            <input type="radio" name="radio-set" checked="checked" id="navbar_2">
+            <span href="#" class="nav_a"></span>
+            <input type="radio" name="radio-set" id="navbar_3">
+            <span href="#" class="nav_a"></span>
+            <div class="jj_xhang_bx clearfix">
+              
+              <div class="wrap-about  jj_fl">
+                <table class="w-content widtsj">
+                  <tr>
+                    <td class="title">姓名 </td>
+                    <td class="break">:</td>
+                    <td> 曹白雨</td>
+                  </tr>
+                  <tr>
+                    <td class="title">电话 </td>
+                    <td class="break">:</td>
+                    <td> 186 &nbsp;3630 &nbsp;9299</td>
+                  </tr>
+                  <tr>
+                    <td class="title">邮箱 </td>
+                    <td class="break">:</td>
+                    <td> linyuan_jiewanghu@yeah.net</td>
+                  </tr>
+                  <tr>
+                    <td class="title">地址 </td>
+                    <td class="break">:</td>
+                    <td> 现住长安区新华街</td>
+                  </tr>
+                  <tr>
+                    <td class="title">微信 </td>
+                    <td class="break">:</td>
+                    <td> 同手机号</td>
+                  </tr>
+                  <tr>
+                    <td class="title">爱好 </td>
+                    <td class="break">:</td>
+                    <td> 好多</td>
+                  </tr>
+                  <!-- <tr>
                   <td class="title"></td>
                   <td class="break">:</td>
                   <td> m-reza</td>
                 </tr> -->
-              </table>
+                </table>
+              </div>
+              <div class="wrap-about jj_rg">
+                <div class="w-content widtsj">
+                  <p class="head-about">
+                    我不太会说话，但做事应该还可以吧(或许偶尔有点神经质)！我上一家公司用的是react，antd的这一套东西。
+                    面试这东西还是仁者见仁智者见智吧(面试好难啊)！如果可以的话，先让我写点小东西！能力的话原生的和react我觉得自己没问题(不一定会说)，
+
+                    vue会点。sass，less都会点。express刚学的时候写过一点，现在应该比python(Flask)还知道的少。其他的就属于见过，我认识他，他不认识我。
+                  </p>
+                </div>
+              </div>
             </div>
           </div>
-        </div>
+        <!-- </div> -->
         <!--/.OWL CAROUSEL2 END-->
         <!-- </div>
   </div> -->
@@ -114,7 +112,8 @@
                 <span>作品</span>
               </h3>
               <p class="content-detail">
-                右边的这些东西也就迷宫可以看看(可以试试，应该没问题),<a href="https://github.com/caobaiyu/caobaiyu.github.com/blob/master/Primqiangb.html">代码</a>的话，用的是并查集，
+                右边的这些东西也就迷宫可以看看(可以试试，应该没问题),<a
+                  href="https://github.com/caobaiyu/caobaiyu.github.com/blob/master/Primqiangb.html">代码</a>的话，用的是并查集，
                 还有很多小问题(不影响使用，成了之后就不想再动它了),没有查询树的深度，函数也有问题(前面也写了两个，都有问题，不能用)。写迷宫纯属个人爱好。
                 <br>
                 <br>
