--- a/index.html
+++ b/index.html
@@ -117,6 +117,9 @@
                 还有很多小问题(不影响使用，成了之后就不想再动它了),没有查询树的深度，函数也有问题(前面也写了两个，都有问题，不能用)。写迷宫纯属个人爱好。
                 <br>
                 <br>
+                d3的中文文档真的少，现在都到5了，网上大部分都是3或4的，最简单的三种图路数都一样，比例尺知道怎么用了
+                就差不多写出来了。
+                <br>
                 <br>
                 购物车是一家公司面试前的笔试，我用原生写的，然后就没有然后了。我这没有兼容，也没有样式(菜单栏没固定，颜色随便)，我觉得业务逻辑应该没问题(或许是我理解错了).
                 自己觉得还行(太懒，实在没有东西放了)。
@@ -152,6 +155,28 @@
                     </div>
                   </a>
                 </li>
+                <li class="li_col_wok">
+                    <a href="./d3/freed3one.html"><img alt="image" src="images/bw-5.png">
+                      <div class="decription-wrap">
+                        <div class="image-bg">
+                          <p class="desc">
+                            d3做的条形图
+                          </p>
+                        </div>
+                      </div>
+                    </a>
+                  </li>
+                  <li class="li_col_wok">
+                    <a href="./d3/freecodtwo.html"><img alt="image" src="images/bw-6.png">
+                      <div class="decription-wrap">
+                        <div class="image-bg">
+                          <p class="desc">
+                              d3做的散点图
+                          </p>
+                        </div>
+                      </div>
+                    </a>
+                  </li>
                 <li class="li_col_wok">
                   <a href="五子棋(可悔棋).html"><img alt="image" src="images/bw-5.png">
                     <div class="decription-wrap">
