--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                   <tr>
                     <td class="title">电话 </td>
                     <td class="break">:</td>
-                    <td> 186 &nbsp;3630 &nbsp;9299</td>
+                    <td> 186 &nbsp;**** &nbsp;9299</td>
                   </tr>
                   <tr>
                     <td class="title">邮箱 </td>
@@ -64,7 +64,7 @@
                   <tr>
                     <td class="title">地址 </td>
                     <td class="break">:</td>
-                    <td> 现住长安区新华街</td>
+                    <td> 现住长安区****</td>
                   </tr>
                   <tr>
                     <td class="title">微信 </td>
