--- a/index.html
+++ b/index.html
@@ -189,11 +189,11 @@
                   </a>
                 </li>
                 <li class="li_col_wok">
-                  <a href="oldind.html"><img alt="image" src="images/bw-6.png">
+                  <a href="./d3/zhongguodt.html"><img alt="image" src="images/bw-6.png">
                     <div class="decription-wrap">
                       <div class="image-bg">
                         <p class="desc">
-                          很难看的界面
+                          d3做的中国地图
                         </p>
                       </div>
                     </div>
