--- a/index.html
+++ b/index.html
@@ -156,11 +156,11 @@
                   </a>
                 </li>
                 <li class="li_col_wok">
-                    <a href="./d3/freed3one.html"><img alt="image" src="images/bw-5.png">
+                    <a href="./L-style/yishi.html"><img alt="image" src="images/bw-5.png">
                       <div class="decription-wrap">
                         <div class="image-bg">
                           <p class="desc">
-                            d3做的条形图
+                            L分形系统写的科赫曲线
                           </p>
                         </div>
                       </div>
