--- a/index.html
+++ b/index.html
@@ -121,12 +121,12 @@
                 就差不多写出来了。
                 <br>
                 <br>
-                购物车是一家公司面试前的笔试，我用原生写的，然后就没有然后了。我这没有兼容，也没有样式(菜单栏没固定，颜色随便)，我觉得业务逻辑应该没问题(或许是我理解错了).
-                自己觉得还行(太懒，实在没有东西放了)。
+                Sierpinski triangle 刚开始写错了(谷歌翻译出错，一直不对，最后看英文对比的！)，分形规则写对了，
+                还是不对，最后才发现是switch没加break，我前面写的有return，这里改过之后没有了，它会执行两次case,角度错了(两个多小时，就加了break)。
                 <br>
                 <br>
                 <br>
-                剩下的就没必要看了(上个那么烂的购物车都说了，想想不说的得有多烂)。
+                <!-- 剩下的就没必要看了(上个那么烂的购物车都说了，想想不说的得有多烂)。 -->
               </p>
             </div>
             <div class="wor_bx_rg">
@@ -194,6 +194,28 @@
                       <div class="image-bg">
                         <p class="desc">
                           d3做的中国地图
+                        </p>
+                      </div>
+                    </div>
+                  </a>
+                </li>
+                <li class="li_col_wok">
+                  <a href="./L-style/xbhsqx.html"><img alt="image" src="images/bw-6.png">
+                    <div class="decription-wrap">
+                      <div class="image-bg">
+                        <p class="desc">
+                          L分形系统写的Sierpinski triangle 
+                        </p>
+                      </div>
+                    </div>
+                  </a>
+                </li>
+                <li class="li_col_wok">
+                  <a href="./L-style/sjbs.html"><img alt="image" src="images/bw-6.png">
+                    <div class="decription-wrap">
+                      <div class="image-bg">
+                        <p class="desc">
+                          L分形系统写的Sierpiński箭头曲线
                         </p>
                       </div>
                     </div>
