--- a/index.html
+++ b/index.html
@@ -211,11 +211,11 @@
                   </a>
                 </li>
                 <li class="li_col_wok">
-                  <a href="./L-style/sjbs.html"><img alt="image" src="images/bw-6.png">
+                  <a href="./L-style/zhil.html"><img alt="image" src="images/bw-6.png">
                     <div class="decription-wrap">
                       <div class="image-bg">
                         <p class="desc">
-                          L分形系统写的Sierpiński箭头曲线
+                          L分形系统写的植物模型
                         </p>
                       </div>
                     </div>
