--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
                     </div>
                   </a>
                 </li>
-                <li class="li_col_wok">
+                 <li class="li_col_wok">
                     <a href="./L-style/yishi.html"><img alt="image" src="images/bw-5.png">
                       <div class="decription-wrap">
                         <div class="image-bg">
@@ -166,7 +166,7 @@
                       </div>
                     </a>
                   </li>
-                  <li class="li_col_wok">
+                 <!-- <li class="li_col_wok">
                     <a href="./d3/freecodtwo.html"><img alt="image" src="images/bw-6.png">
                       <div class="decription-wrap">
                         <div class="image-bg">
@@ -176,7 +176,7 @@
                         </div>
                       </div>
                     </a>
-                  </li>
+                  </li> -->
                 <li class="li_col_wok">
                   <a href="五子棋(可悔棋).html"><img alt="image" src="images/bw-5.png">
                     <div class="decription-wrap">
@@ -188,7 +188,7 @@
                     </div>
                   </a>
                 </li>
-                <li class="li_col_wok">
+                <!-- <li class="li_col_wok">
                   <a href="./d3/zhongguodt.html"><img alt="image" src="images/bw-6.png">
                     <div class="decription-wrap">
                       <div class="image-bg">
@@ -198,7 +198,7 @@
                       </div>
                     </div>
                   </a>
-                </li>
+                </li> -->
                 <li class="li_col_wok">
                   <a href="./L-style/xbhsqx.html"><img alt="image" src="images/bw-6.png">
                     <div class="decription-wrap">
@@ -211,6 +211,28 @@
                   </a>
                 </li>
                 <li class="li_col_wok">
+                  <a href="./L-style/zhil.html"><img alt="image" src="images/bw-6.png">
+                    <div class="decription-wrap">
+                      <div class="image-bg">
+                        <p class="desc">
+                          L分形系统写的植物模型
+                        </p>
+                      </div>
+                    </div>
+                  </a>
+                </li>
+                 <li class="li_col_wok">
+                  <a href="./vue/index.html"><img alt="image" src="images/bw-6.png">
+                    <div class="decription-wrap">
+                      <div class="image-bg">
+                        <p class="desc">
+                          vue项目
+                        </p>
+                      </div>
+                    </div>
+                  </a>
+                </li>
+                 <li class="li_col_wok">
                   <a href="./L-style/zhil.html"><img alt="image" src="images/bw-6.png">
                     <div class="decription-wrap">
                       <div class="image-bg">
